<resources>
    <string name="app_name">AndroidBankingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="responsible_message">You are responsible for providing the correct recipient details and you must have the recipient\'permission to use them.</string>

    <string name="action_text">OK</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="manage_hyperlink"><u>Manage</u></string>
    <string name="phoneText">Update your primary contact numbers for RBC Royal Bank. \n\nSome RBC Services manage numbers separately. Any changes you make here might not apply to those services.</string>
    <string name="addPhoneNumberHyperlink"><u> Add a phone number </u></string>
    <string name="whyKeepPhoneUpdated">There are several reasons why we might call you. Here are two examples. \n\nIf there\'s a security concern or emergency, we can use these numbers to call you. This might be if we detect possible suspicious transactions. \n\nAnother reason is if we think a new product or service could benefit you, we\'ll call you to talk about it. We only do this if you already agreed to get calls like these. And you can stop them at any time.</string>

    <string name="emailText">Tell us how you want to get email notifications. \n\nSome RBC services manage email addresses separately. Any charges you make here might not apply to those services.</string>
    <string name="addEmailAddressHyperlink"><u> Add an email address </u></string>
    <string name="whyKeepEmailUpdated">There are several types of emails we might send to you. Here are some examples. \n\nOne might tell you about a change to your Online Banking password. Very important if you didn\'t change your password. \n\nAnother might say when new account documents and statements are ready. This could be helpful as a reminder to pay a credit card bill. \n\nIf we think a new product or service could benefit you, we\'ll send a promotional message. Of course, you can always unsubscribe from these messages using the link inside the email.</string>

    <string name="changedProvincesText"><u>Changed provinces or moved from Canada?</u></string>
    <string name="updateAddressesNumbers">To update your addresses for the following accounts, please call: <ul>\n\n<li>RBC Insurance: <a href="tel:18886447581"><font color="#006AC2">1-888-644-7581</font></a></li> \n\n<li>Investments (e.g. RRSPs, RESPs, RFSAs, Mutual Funds &amp; GICs): <u><font color="#006AC2">1-800-463-3863</font></u></li> \n\n<li>RBC Direct Investing: <u><font color="#006AC2">1-800-769-2560</font></u></li> \n\n<li>RBC Dominion Services: <u><font color="#006AC2">1-888-820-8006</font></u></li> \n\n<li>RBC Wealth Management: <u><font color="#006AC2">1-833-654-2566</font></u></li> </ul></string>
    <string name="test"><a href="tel:8886447581">1-888-644-7581</a></string>
    <string name="whyKeepAddressUpdated">Your home address is where we send your mail unless you provide a separate mailing address. We need one to provide you certain services, like replacing a debit card. \n\nAlso, government regulations require us to collect both your address and tax residency information. \n\n<b>Note:</b> You can use a PO box or general delivery address for your mailing address but not for your home address.</string>
</resources>