<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EmailFragment">

    <ScrollView
        android:id="@+id/parentSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/topTB"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/returnBack"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="15dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/return_back_arrow_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/returnBack2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/AddressTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:text="Email"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topTB" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addressText"
                app:layout_constraintTop_toBottomOf="@id/AddressTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/emailText"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="40dp"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbcAccountsTV"
                android:text="Your email addresses"
                app:layout_constraintTop_toBottomOf="@id/addressText"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginStart="15dp"
                />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/rbcAccountsTV"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/homeAddressLabelTV"
                android:text="Primary"
                app:layout_constraintStart_toStartOf="@id/view1"
                app:layout_constraintTop_toTopOf="@id/view1"
                android:textSize="22sp"
                android:layout_margin="15dp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/editIcon"
                android:src="@drawable/edit_pencil_icon_blue"
                app:layout_constraintEnd_toEndOf="@id/view1"
                app:layout_constraintTop_toTopOf="@id/view1"
                android:layout_margin="18dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/primaryEmailValueTV"
                android:text="test@gmail.com"
                app:layout_constraintTop_toBottomOf="@id/homeAddressLabelTV"
                app:layout_constraintStart_toStartOf="@id/view1"
                app:layout_constraintEnd_toEndOf="@id/view1"
                android:layout_margin="15dp"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/addEmailAddressIcon"
                android:src="@drawable/plus_filled_icon_blue"
                app:layout_constraintTop_toBottomOf="@id/view1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addEmailAddressTV"
                android:text="@string/addEmailAddressHyperlink"
                app:layout_constraintTop_toBottomOf="@id/view1"
                app:layout_constraintStart_toEndOf="@id/addEmailAddressIcon"
                android:layout_marginTop="25dp"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                />


            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                app:layout_constraintTop_toBottomOf="@id/addEmailAddressIcon"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="15dp"/>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="50dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/view2"
                />

            <ImageView
                android:id="@+id/lightBulbIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:src="@drawable/light_bulb_icon"
                app:layout_constraintBottom_toTopOf="@+id/whyUpdateAddressTV2"
                app:layout_constraintStart_toStartOf="@id/view3"
                app:layout_constraintTop_toTopOf="@id/view3" />

            <TextView
                android:id="@+id/whyUpdateAddressTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Why you should keep your email updated"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/lightBulbIcon"
                app:layout_constraintEnd_toEndOf="@id/view3"
                app:layout_constraintTop_toTopOf="@id/view3"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/whyUpdateAddressTV2"
                android:text="@string/whyKeepEmailUpdated"
                app:layout_constraintTop_toBottomOf="@id/whyUpdateAddressTV"
                app:layout_constraintStart_toStartOf="@id/view3"
                app:layout_constraintEnd_toEndOf="@id/view3"
                android:layout_margin="15dp"
                android:textSize="16sp"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="120dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>