<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.AddressFragment">

    <ScrollView
        android:id="@+id/parentSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/topTB"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/returnBack"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="15dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/return_back_arrow_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/returnBack2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/AddressTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:text="Address"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topTB" />

            <TextView
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="40dp"
                android:text="Keep your addresses up-to-date and choose where we send your paper mail."
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AddressTV" />

            <TextView
                android:id="@+id/rbcAccountsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:text="1. RBC Royal Bank accounts"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressText" />

            <TextView
                android:id="@+id/rbcAccountsTV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="40dp"
                android:text="Update addresses for your banking accounts, including mortgages, loans and credit cards."
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rbcAccountsTV" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/rbcAccountsTV2"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/homeAddressLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Home Address"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/view1"
                app:layout_constraintTop_toTopOf="@id/view1" />

            <ImageView
                android:id="@+id/editHomeAddressIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="18dp"
                android:src="@drawable/edit_pencil_icon_blue"
                app:layout_constraintEnd_toEndOf="@id/view1"
                app:layout_constraintTop_toTopOf="@id/view1" />

            <TextView
                android:id="@+id/homeAddressValueTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginEnd="112dp"
                android:text="123, Some St., Some City, ON"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/view1"
                app:layout_constraintStart_toStartOf="@id/view1"
                app:layout_constraintTop_toBottomOf="@id/homeAddressLabelTV" />


            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/view1" />

            <TextView
                android:id="@+id/mailingAddressLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Mailing Address"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/view2"
                app:layout_constraintTop_toTopOf="@id/view2" />

            <ImageView
                android:id="@+id/editMailingAddressIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="18dp"
                android:src="@drawable/edit_pencil_icon_blue"
                app:layout_constraintEnd_toEndOf="@id/view2"
                app:layout_constraintTop_toTopOf="@id/view2" />

            <TextView
                android:id="@+id/mailingAddressValueTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="123, Some St.,Some City, ON"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@id/view2"
                app:layout_constraintTop_toBottomOf="@id/mailingAddressLabelTV" />


            <ImageView
                android:id="@+id/chevronChangedProvincesIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/baseline_chevron_right_24"
                app:layout_constraintBottom_toTopOf="@id/yourOtherAccountsTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <TextView
                android:id="@+id/changedProvincesTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/changedProvincesText"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />


            <TextView
                android:id="@+id/yourOtherAccountsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:text="2. Your other RBC accounts"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/changedProvincesTV" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/yourOtherAccountsTV" />

            <TextView
                android:id="@+id/yourOtherAccountsTV2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/updateAddressesNumbers"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/view3"
                app:layout_constraintStart_toStartOf="@id/view3"
                app:layout_constraintTop_toTopOf="@id/view3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/test"
                android:text="@string/test"
                android:onClick="onRBCInsuranceNumClickHandler"
                app:layout_constraintStart_toStartOf="@id/view3"
                app:layout_constraintTop_toTopOf="@id/view3"
                />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@color/lightGrey"
                app:layout_constraintTop_toBottomOf="@id/view3" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="50dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/view4" />

            <ImageView
                android:id="@+id/lightBulbIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/light_bulb_icon"
                app:layout_constraintStart_toStartOf="@id/view5"
                app:layout_constraintTop_toTopOf="@id/view5" />

            <TextView
                android:id="@+id/whyUpdateAddressTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Why you need to keep your address and tax info updated"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/view5"
                app:layout_constraintStart_toEndOf="@id/lightBulbIcon"
                app:layout_constraintTop_toTopOf="@id/view5" />

            <TextView
                android:id="@+id/whyUpdateAddressTV2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/whyKeepAddressUpdated"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/view5"
                app:layout_constraintStart_toStartOf="@id/view5"
                app:layout_constraintTop_toBottomOf="@id/whyUpdateAddressTV" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>